src/tess/tl/test/fail/test_fail_carray_literal_count.tl
#module main

main() {
    arr: CArray[Int, 3] := {1, 2}
    return 0
}
